# ticketsplease

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  clippy.toml  deny.toml  install.sh  rust-toolchain.toml  ticketsplease.toml
.github/workflows/: ci.yml  release.yml
crates/ticketsplease-cargo/: Cargo.toml
crates/ticketsplease-cargo/src/: lib.rs
crates/ticketsplease-cli/: Cargo.toml
crates/ticketsplease-cli/skill/: SKILL.md
crates/ticketsplease-cli/skill/references/: commands.md  parallel-workflow.md
crates/ticketsplease-cli/src/: advisory.rs  cli.rs  commands.rs  format.rs  main.rs  recipe.rs  skill.rs  templates.rs  update.rs  update_check.rs
crates/ticketsplease-cli/tests/: integration.rs
crates/ticketsplease-core/: Cargo.toml
crates/ticketsplease-core/src/: claim.rs  comment.rs  config.rs  error.rs  event.rs  frontmatter.rs  guard.rs  ids.rs  lib.rs  lint.rs  migrate.rs  query.rs  schedule.rs  states.rs  store.rs  ticket.rs  views.rs
tickets/: access-intent-scopes.md  advisory-output-channel.md  auto-migrate-apply.md  body-templates.md  bulk-edit-manifest.md  closed-status-resolution.md  config-custom-states.md  dispatch-lanes.md  docs-maintenance-advisories.md  docs-skill-parallel-control.md  drift-migrate-advisory.md  embed-skill.md  graph-path-export.md  guard-honors-access-intent.md  init-rust-autodetect.md  initiative-rollup.md  install-script.md  integration-tests.md  lint-a-ticket-that-declares-paths-but-no-scopes.md  lint-summary-advisory.md  maintenance-advisories.md  maintenance-config-table.md  migrate-dry-run.md  migrate-engine.md  next-aware-of-inflight.md  overlap-tolerant-tracks-next.md  parallel-escape-hatches.md  parallel-width-query.md  paths-without-scopes-should-skip-terminal-tickets.md  query-where-filters.md  readme-docs.md  related-links.md  release-ci.md  rename-repoints-dependencies-but-not-related.md  saved-views.md  scope-policy-defaults.md  self-update.md  skill-best-practices.md  skill-global-distribution.md  state-transition-workflows.md  (+55 more)
