[package]
name = "ticketsplease-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "ticketsplease CLI — git-native parallel-work ticketing."

[[bin]]
name = "ticketsplease"
path = "src/main.rs"

[dependencies]
ticketsplease-core = { workspace = true }
ticketsplease-cargo = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
