[package]
name = "ticketsplease-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "ticketsplease CLI — git-native parallel-work ticketing."

[[bin]]
name = "ticketsplease"
path = "src/main.rs"

[dependencies]
ticketsplease-core = { workspace = true }
ticketsplease-cargo = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
include_dir = { workspace = true }

[dev-dependencies]
assert_cmd = "2"
tempfile = "3"

[lints]
workspace = true
