[package]
name = "ticketsplease-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Core library for ticketsplease: ticket model, scheduling, and conflict-guard logic."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
yaml-rust2 = { workspace = true }
globset = { workspace = true }

[lints]
workspace = true
